# skill_eval

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: settings.yaml  skills.lock.yaml  universe.yaml
data/: fmp_field_catalog.json  label_cache.json
docs/: design_decisions.md  in_depth_report.md  next_steps.md  related_work.md
fixtures/: _build_fixtures.py  expected_ledgers.json  sample_capital_allocation.xlsx  sample_comps.xlsx  sample_tearsheet.xlsx
scripts/: big_test.py  calibration.py  cost_pilot.py  daloopa_smoke.py  fmp_self_check_demo.py  m7_demo.py  stress_test.py
skills/daloopa/: data-access.md
skills/fmp/capital-allocation/: SKILL.md
skills/fmp/comps/: SKILL.md  fmp_data_access.md
skills/fmp/tearsheet/: SKILL.md
src/finskill_eval/: __init__.py  config.py  ledger.py  metrics.py  normalize.py  parse_xlsx.py  recompute.py  report.py  tolerance.py  verify.py
src/finskill_eval/checks/: __init__.py  fmp_self_check.py  llm_label_resolver.py
src/finskill_eval/conversion/: __init__.py  compare.py  convert_skill.py  run_conversion.py
tests/: test_candidate.py  test_compare.py  test_config.py  test_convert_skill.py  test_effect_size.py  test_feedback_and_optreport.py  test_fmp_self_check.py  test_groundtruth.py  test_invoke_skill.py  test_ledger.py  test_llm_extract.py  test_llm_label_resolver.py  test_m5.py  test_normalize.py  test_optimize_loop.py  test_parse_matrix.py  test_parse_xlsx.py  test_recompute.py  test_run_optimization.py  test_skilldoc.py  test_tolerance.py  test_verify_endtoend.py
(+21 files in other folders)
