[project]
name = "finskill-eval"
version = "0.1.0"
description = "Automated evaluation pipeline for financial AI agent skills (neuro-symbolic: LLM does semantic work, Python does all arithmetic)."
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3,<0.4",
    "openpyxl>=3.1,<4",
    "pandas>=2.2,<3",
    "httpx>=0.27,<0.29",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "tenacity>=8.3,<10",
    "python-dotenv>=1.0,<2",
    "rich>=13.7,<15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
